--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -24,10 +24,11 @@ body {
 
 /* Navbar */
 
-.header {
+nav {
     position: absolute;
     top: 0;
     left: 0;
+    background: linear-gradient(90deg, transparent, var(--tertiary-color-dark), transparent);
     width: 100%;
     padding: 1.3rem 10%;
     display: flex;
@@ -35,7 +36,7 @@ body {
     z-index: 100;
 }
 
-.header::before {
+nav::before {
     content: '';
     position: absolute ;
     top: 0;
@@ -47,7 +48,7 @@ body {
     z-index: -1;
 }
 
-.header::after {
+nav::after {
     content: '';
     position: absolute;
     top: 0;
@@ -58,7 +59,7 @@ body {
     transition: .5s;
 }
 
-.header:hover::after {
+nav:hover::after {
     left: 100%;
 }
 
@@ -155,7 +156,7 @@ footer {
     width: 100%;
     position: fixed;
     bottom: 0;
-    background: linear-gradient(90deg, transparent, var(--secondary-color-dark), transparent);
+    background: linear-gradient(90deg, transparent, var(--tertiary-color-dark), transparent);
     color: #fff;
     margin-top: 10px;
     padding: 50px 0 30px;
@@ -398,7 +399,7 @@ hr {
 .main-container .card .content h2 {
     font-size: 1.5em;
     font-weight: 700;
-    color: var(--clr);
+    color: var(--primary-color);
 }
 
 /* Bandeau */
