--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -1,17 +1,213 @@
-    <header class="header">
-        <a href="#" class="logo"><img src="{{ asset('assets/css/img/logoreel.png') }}" alt="logo" class="w-48"></a>
+<!--Main Navigation-->
+<header>
+    <style>
+        /* Carousel styling */
+        #introCarousel,
+        .carousel-inner,
+        .carousel-item,
+        .carousel-item.active {
+            height: 100vh;
+        }
 
-        <input type="checkbox" id="check">
-        <label for="check" class="icons">
-            <i class="bx bx-menu" id="menu-icon"></i>
-            <i class="bx bx-x" id="close-icon"></i>
-        </label>
+        .carousel-item:nth-child(1) {
+            background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+        }
+        .carousel-item:nth-child(2) {
+            background-image: url('https://mdbootstrap.com/img/Photos/Others/images/77.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+        }
+        .carousel-item:nth-child(3) {
+            background-image: url('https://mdbootstrap.com/img/Photos/Others/images/78.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+        }
 
-        <nav class="navbar-css">
-            <a href="#" style="--i:0;">Accueil</a>
-            <a href="#" style="--i:1;">Catégories</a>
-            <a href="#" style="--i:3;"><i class='bx bx-user'></i></a>
-            <a href="#" style="--i:4;"><i class='bx bx-cart'></i></a>
-        </nav>
-    </header>
+        /* Height for devices larger than 576px */
+        @media (min-width: 992px) {
+            #introCarousel {
+                margin-top: -58.59px;
+            }
+            #introCarousel,
+            .carousel-inner,
+            .carousel-item,
+            .carousel-item.active {
+                height: 50vh;
+            }
+        }
 
+        .navbar .nav-link {
+            color: #fff !important;
+        }
+    </style>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark d-none d-lg-block" style="z-index: 2000;">
+        <div class="container-fluid">
+            <!-- Navbar brand -->
+            <a class="navbar-brand nav-link" target="_blank" href="https://mdbootstrap.com/docs/standard/">
+                <strong>TheGoldenGun</strong>
+            </a>
+            <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
+                    aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarExample01">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" aria-current="page" href="#intro">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" rel="nofollow"
+                           target="_blank">Catégories</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://mdbootstrap.com/docs/standard/" target="_blank">A propos</a>
+                    </li>
+                </ul>
+
+                <ul class="navbar-nav d-flex flex-row">
+                    <!-- Icons -->
+                    <li class="nav-item me-3 me-lg-0">
+                        <a class="nav-link" href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" rel="nofollow"
+                           target="_blank">
+                            <i class='bx bxl-youtube' style='color:#ffffff' ></i>
+                        </a>
+                    </li>
+                    <li class="nav-item me-3 me-lg-0">
+                        <a class="nav-link" href="https://www.facebook.com/mdbootstrap" rel="nofollow" target="_blank">
+                            <i class='bx bxl-facebook-circle' style='color:#ffffff' ></i>
+                        </a>
+                    </li>
+                    <li class="nav-item me-3 me-lg-0">
+                        <a class="nav-link" href="https://twitter.com/MDBootstrap" rel="nofollow" target="_blank">
+                            <i class='bx bxl-twitter' style='color:#ffffff' ></i>
+                        </a>
+                    </li>
+                    <li class="nav-item me-3 me-lg-0">
+                        <a class="nav-link" href="https://github.com/DioufFLR" rel="nofollow" target="_blank">
+                            <i class='bx bxl-github' style='color:#ffffff' ></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar -->
+
+    <!-- Carousel wrapper -->
+    <div id="introCarousel" class="carousel slide carousel-fade shadow-2-strong" data-mdb-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-mdb-target="#introCarousel" data-mdb-slide-to="0" class="active"></li>
+            <li data-mdb-target="#introCarousel" data-mdb-slide-to="1"></li>
+            <li data-mdb-target="#introCarousel" data-mdb-slide-to="2"></li>
+        </ol>
+
+        <!-- Inner -->
+        <div class="carousel-inner">
+            <!-- Single item -->
+            <div class="carousel-item active">
+                <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+                    <div class="d-flex justify-content-center align-items-center h-100">
+                        <div class="text-white text-center">
+                            <h1 class="mb-3">Learn Bootstrap 5 with MDB</h1>
+                            <h5 class="mb-4">Best & free guide of responsive web design</h5>
+                            <a
+                                    class="btn btn-outline-light btn-lg m-2"
+                                    href="https://www.youtube.com/watch?v=c9B4TPnak1A"
+                                    role="button"
+                                    rel="nofollow"
+                                    target="_blank"
+                            >Start tutorial</a
+                            >
+                            <a
+                                    class="btn btn-outline-light btn-lg m-2"
+                                    href="https://mdbootstrap.com/docs/standard/"
+                                    target="_blank"
+                                    role="button"
+                            >Download MDB UI KIT</a
+                            >
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single item -->
+            <div class="carousel-item">
+                <div class="mask" style="background-color: rgba(0, 0, 0, 0.3);">
+                    <div class="d-flex justify-content-center align-items-center h-100">
+                        <div class="text-white text-center">
+                            <h2>Vise bien et tout ira bien</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single item -->
+            <div class="carousel-item">
+                <div
+                        class="mask"
+                        style="
+                background: linear-gradient(
+                  45deg,
+                  rgba(29, 236, 197, 0.7),
+                  rgba(91, 14, 214, 0.7) 100%
+                );
+              "
+                >
+                    <div class="d-flex justify-content-center align-items-center h-100">
+                        <div class="text-white text-center">
+                            <h2>La sécurité au meilleur prix</h2>
+                            <a
+                                    class="btn btn-outline-light btn-lg m-2"
+                                    href="https://mdbootstrap.com/docs/standard/content-styles/masks/"
+                                    target="_blank"
+                                    role="button"
+                            >Voir les produits</a
+                            >
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Inner -->
+
+        <!-- Controls -->
+        <a class="carousel-control-prev" href="#introCarousel" role="button" data-mdb-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only"><i class='bx bx-chevron-left' style='color:#ffffff' ></i></span>
+        </a>
+        <a class="carousel-control-next" href="#introCarousel" role="button" data-mdb-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only"><i class='bx bx-chevron-right' style='color:#ffffff' ></i></span>
+        </a>
+    </div>
+    <!-- Carousel wrapper -->
+</header>
+<!--Main Navigation-->
+
+
+<!-- Navbar alternative CSS-->
+
+{#    <header class="header">#}
+{#        <a href="#" class="logo"><img src="{{ asset('assets/css/img/logoreel.png') }}" alt="logo" class="w-48"></a>#}
+
+{#        <input type="checkbox" id="check">#}
+{#        <label for="check" class="icons">#}
+{#            <i class="bx bx-menu" id="menu-icon"></i>#}
+{#            <i class="bx bx-x" id="close-icon"></i>#}
+{#        </label>#}
+
+{#        <nav class="navbar-css">#}
+{#            <a href="#" style="--i:0;">Accueil</a>#}
+{#            <a href="#" style="--i:1;">Catégories</a>#}
+{#            <a href="#" style="--i:3;"><i class='bx bx-user'></i></a>#}
+{#            <a href="#" style="--i:4;"><i class='bx bx-cart'></i></a>#}
+{#        </nav>#}
+{#    </header>#}
