--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -106,6 +106,8 @@
             <!--Section: Content-->
 
             <hr class="my-5" />
+        </div>
+    </main>
 
 {#    <section class="main">#}
 {#        <div class="card-text">#}
