--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -19,7 +19,7 @@
 body {
     min-height: 100vh;
     background-size: cover;
-    background: black no-repeat center;
+    background: white no-repeat center;
 }
 
 /* Navbar */
@@ -154,9 +154,9 @@ nav:hover::after {
 
 footer {
     width: 100%;
-    position: fixed;
+    position: relative;
     bottom: 0;
-    background: linear-gradient(90deg, transparent, var(--tertiary-color-dark), transparent);
+    background: linear-gradient(90deg, purple, darkblue);
     color: #fff;
     margin-top: 10px;
     padding: 50px 0 30px;
@@ -216,9 +216,9 @@ footer {
 
 form {
     padding-bottom: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    /*display: flex;*/
+    /*align-items: center;*/
+    /*justify-content: space-between;*/
     border-bottom: 1px solid #fff;
     margin-bottom: 50px;
 }
@@ -228,12 +228,15 @@ form .bx {
     margin-right: 10px;
 }
 
-form input {
+.form-outline {
     width: 100%;
-    background: transparent;
-    color: #fff;
-    border: 0;
+    background: #3b71ca;
+    /*color: #fff;*/
     outline: none;
+}
+
+.form-outline label {
+    color: #fff !important;
 }
 
 form button {
@@ -243,10 +246,10 @@ form button {
     cursor: pointer;
 }
 
-form button .bx {
-    font-size: 16px;
-    color: #ccc;
-}
+/*form button .bx {*/
+/*    font-size: 16px;*/
+/*    color: #ccc;*/
+/*}*/
 
 .social-icons .bx {
     width: 40px;
@@ -261,9 +264,7 @@ form button .bx {
     cursor: pointer;
 }
 
-.input-footer::placeholder {
-    color: #fff;
-}
+
 
 .h4-num-footer {
     margin-top: 25px;
@@ -327,79 +328,79 @@ hr {
 
 /* Main cards */
 
-.main-container {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 100px 50px;
-    padding: 100px 50px;
-    margin-top: 6em;
-}
+/*.main-container {*/
+/*    position: relative;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    flex-wrap: wrap;*/
+/*    gap: 100px 50px;*/
+/*    padding: 100px 50px;*/
+/*    margin-top: 6em;*/
+/*}*/
 
-.main-container .card {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    width: 350px;
-    height: 300px;
-    background: linear-gradient(90deg, transparent, var(--secondary-color-green), transparent);
-    border-radius: 20px;
-    box-shadow: 0 35px 80px rgba(0, 0, 0, 0.15);
-    transition: 0.5s;
-}
+/*.main-container .card {*/
+/*    position: relative;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: flex-start;*/
+/*    width: 350px;*/
+/*    height: 300px;*/
+/*    background: linear-gradient(90deg, transparent, var(--mdb-black-rgb), transparent);*/
+/*    border-radius: 20px;*/
+/*    box-shadow: 0 35px 80px rgba(0, 0, 0, 0.15);*/
+/*    transition: 0.5s;*/
+/*}*/
 
-.main-container .card:hover {
-    height: 400px;
-}
+/*.main-container .card:hover {*/
+/*    height: 400px;*/
+/*}*/
 
-.main-container .card .imgBx {
-    position: absolute;
-    width: 300px;
-    height: 220px;
-    background: #333;
-    border-radius: 12px;
-    overflow: hidden;
-    transition: 0.5s;
-}
+/*.main-container .card .imgBx {*/
+/*    position: absolute;*/
+/*    width: 300px;*/
+/*    height: 220px;*/
+/*    background: #333;*/
+/*    border-radius: 12px;*/
+/*    overflow: hidden;*/
+/*    transition: 0.5s;*/
+/*}*/
 
-.main-container .card:hover .imgBx {
-    top: -100px;
-    scale: 0.75;
-    box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);
-}
+/*.main-container .card:hover .imgBx {*/
+/*    top: -100px;*/
+/*    scale: 0.75;*/
+/*    box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);*/
+/*}*/
 
-.main-container .card .imgBx img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+/*.main-container .card .imgBx img {*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    object-fit: cover;*/
+/*}*/
 
-.main-container .card .content {
-    position: absolute;
-    top: 252px;
-    width: 100%;
-    padding: 0 30px;
-    height: 30px;
-    overflow: hidden;
-    text-align: center;
-    transition: 0.5s;
-}
+/*.main-container .card .content {*/
+/*    position: absolute;*/
+/*    top: 252px;*/
+/*    width: 100%;*/
+/*    padding: 0 30px;*/
+/*    height: 30px;*/
+/*    overflow: hidden;*/
+/*    text-align: center;*/
+/*    transition: 0.5s;*/
+/*}*/
 
-.main-container .card:hover .content {
-    top: 130px;
-    height: 250px;
-}
+/*.main-container .card:hover .content {*/
+/*    top: 130px;*/
+/*    height: 250px;*/
+/*}*/
 
-.main-container .card .content h2 {
-    font-size: 1.5em;
-    font-weight: 700;
-    color: var(--primary-color);
-}
+/*.main-container .card .content h2 {*/
+/*    font-size: 1.5em;*/
+/*    font-weight: 700;*/
+/*    color: var(--primary-color);*/
+/*}*/
 
 /* Bandeau */
