--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -1,83 +1,78 @@
-{# Footer bootstrap #}
-
-<!--Section: Content-->
-<section class="mb-5">
-    <h4 class="mb-5 text-center"><strong>S'abonner à la newsletter</strong></h4>
-
-    <div class="row d-flex justify-content-center">
-        <div class="col-md-6">
-            <form>
-                <!-- 2 column grid layout with text inputs for the first and last names -->
-                <div class="row mb-4">
-                    <div class="col">
-                        <div class="form-outline">
-                            <input type="text" id="form3Example1" class="form-control" />
-                            <label class="form-label" for="form3Example1">Prénom</label>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="form-outline">
-                            <input type="text" id="form3Example2" class="form-control" />
-                            <label class="form-label" for="form3Example2">Nom</label>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Email input -->
-                <div class="form-outline mb-4">
-                    <input type="email" id="form3Example3" class="form-control" />
-                    <label class="form-label" for="form3Example3">Email</label>
-                </div>
-
-                <!-- Password input -->
-                <div class="form-outline mb-4">
-                    <input type="password" id="form3Example4" class="form-control" />
-                    <label class="form-label" for="form3Example4">Mot de passe</label>
-                </div>
-
-                <!-- Checkbox -->
-                <div class="form-check d-flex justify-content-center mb-4">
-                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" checked />
-                    <label class="form-check-label" for="form2Example3">
-                        Souscrire à notre newsletter
-                    </label>
-                </div>
-
-                <!-- Submit button -->
-                <button type="submit" class="btn btn-primary btn-block mb-4">
-                    S'inscrire
-                </button>
-
-                <!-- Register buttons -->
-                <div class="text-center">
-                    <p>ou s'inscrire avec:</p>
-                    <button type="button" class="btn btn-primary btn-floating mx-1">
-                        <i class='bx bxl-facebook-circle' style='color:#ffffff' ></i>
-                    </button>
-
-                    <button type="button" class="btn btn-primary btn-floating mx-1">
-                        <i class='bx bxl-google' style='color:#ffffff' ></i>
-                    </button>
-
-                    <button type="button" class="btn btn-primary btn-floating mx-1">
-                        <i class='bx bxl-twitter' style='color:#ffffff' ></i>
-                    </button>
-
-                    <button type="button" class="btn btn-primary btn-floating mx-1">
-                        <i class='bx bxl-github' style='color:#ffffff' ></i>
-                    </button>
-                </div>
-            </form>
-        </div>
-    </div>
-</section>
-<!--Section: Content-->
-</div>
-</main>
-<!--Main layout-->
-
 <!--Footer-->
 <footer class="bg-light text-lg-start">
+
+    <!--Section: Content-->
+    <section class="mb-5">
+        <h4 class="mb-5 text-center"><strong>S'abonner à la newsletter</strong></h4>
+
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-6">
+                <form>
+                    <!-- 2 column grid layout with text inputs for the first and last names -->
+                    <div class="row mb-4">
+                        <div class="col">
+                            <div class="form-outline form-white">
+                                <input type="text" id="form3Example1" class="form-control" />
+                                <label class="form-label" for="form3Example1">Prénom</label>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-outline form-white">
+                                <input type="text" id="form3Example2" class="form-control" />
+                                <label class="form-label" for="form3Example2">Nom</label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Email input -->
+                    <div class="form-outline form-white mb-4">
+                        <input type="email" id="form3Example3" class="form-control" />
+                        <label class="form-label" for="form3Example3">Email</label>
+                    </div>
+
+                    <!-- Password input -->
+                    <div class="form-outline form-white mb-4">
+                        <input type="password" id="form3Example4" class="form-control" />
+                        <label class="form-label" for="form3Example4">Mot de passe</label>
+                    </div>
+
+                    <!-- Checkbox -->
+                    <div class="form-check d-flex justify-content-center mb-4">
+                        <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" checked />
+                        <label class="form-check-label" for="form2Example3">
+                            Souscrire à notre newsletter
+                        </label>
+                    </div>
+
+                    <!-- Submit button -->
+                    <button type="submit" class="btn btn-primary btn-block mb-4">
+                        S'inscrire
+                    </button>
+
+                    <!-- Register buttons -->
+                    <div class="text-center">
+                        <p>ou s'inscrire avec:</p>
+                        <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <i class='bx bxl-facebook-circle' style='color:#ffffff' ></i>
+                        </button>
+
+                        <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <i class='bx bxl-google' style='color:#ffffff' ></i>
+                        </button>
+
+                        <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <i class='bx bxl-twitter' style='color:#ffffff' ></i>
+                        </button>
+
+                        <button type="button" class="btn btn-primary btn-floating mx-1">
+                            <i class='bx bxl-github' style='color:#ffffff' ></i>
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <div class="py-4 text-center">
         <a role="button" class="btn btn-primary btn-lg m-2"
            href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" rel="nofollow" target="_blank">
