--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -4,7 +4,95 @@
 
 
     <!--Main Navigation-->
+    <!-- Carousel wrapper -->
+    <div id="introCarousel" class="carousel slide carousel-fade shadow-2-strong" data-mdb-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-mdb-target="#introCarousel" data-mdb-slide-to="0" class="active"></li>
+            <li data-mdb-target="#introCarousel" data-mdb-slide-to="1"></li>
+            <li data-mdb-target="#introCarousel" data-mdb-slide-to="2"></li>
+        </ol>
 
+        <!-- Inner -->
+        <div class="carousel-inner">
+            <!-- Single item -->
+            <div class="carousel-item active">
+                <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
+                    <div class="d-flex justify-content-center align-items-center h-100">
+                        <div class="text-white text-center">
+                            <h1 class="mb-3">Choisissez l'arme qui vous convient</h1>
+                            <h5 class="mb-4">Conseils de nos professionnels</h5>
+                            <a
+                                    class="btn btn-outline-light btn-lg m-2"
+                                    href="https://www.youtube.com/watch?v=c9B4TPnak1A"
+                                    role="button"
+                                    rel="nofollow"
+                                    target="_blank"
+                            >Certifié létale</a
+                            >
+                            <a
+                                    class="btn btn-outline-light btn-lg m-2"
+                                    href="https://mdbootstrap.com/docs/standard/"
+                                    target="_blank"
+                                    role="button"
+                            >Munitions de qualitées prenium</a
+                            >
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single item -->
+            <div class="carousel-item">
+                <div class="mask" style="background-color: rgba(0, 0, 0, 0.3);">
+                    <div class="d-flex justify-content-center align-items-center h-100">
+                        <div class="text-white text-center">
+                            <h2>Vise bien et tout ira bien</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Single item -->
+            <div class="carousel-item">
+                <div
+                        class="mask"
+                        style="
+                background: linear-gradient(
+                  45deg,
+                  rgba(29, 236, 197, 0.7),
+                  rgba(91, 14, 214, 0.7) 100%
+                );
+              "
+                >
+                    <div class="d-flex justify-content-center align-items-center h-100">
+                        <div class="text-white text-center">
+                            <h2>La sécurité au meilleur prix</h2>
+                            <a
+                                    class="btn btn-outline-light btn-lg m-2"
+                                    href="https://mdbootstrap.com/docs/standard/content-styles/masks/"
+                                    target="_blank"
+                                    role="button"
+                            >Voir les produits</a
+                            >
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Inner -->
+
+        <!-- Controls -->
+        <a class="carousel-control-prev" href="#introCarousel" role="button" data-mdb-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only"><i class='bx bx-chevron-left' style='color:#ffffff' ></i></span>
+        </a>
+        <a class="carousel-control-next" href="#introCarousel" role="button" data-mdb-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only"><i class='bx bx-chevron-right' style='color:#ffffff' ></i></span>
+        </a>
+    </div>
+    <!-- Carousel wrapper -->
     <!--Main layout-->
     <main class="mt-5">
         <div class="container">
