--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -76,17 +76,17 @@
     <div class="py-4 text-center">
         <a role="button" class="btn btn-primary btn-lg m-2"
            href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" rel="nofollow" target="_blank">
-            Learn Bootstrap 5
+            Nos fournisseurs
         </a>
         <a role="button" class="btn btn-primary btn-lg m-2" href="https://mdbootstrap.com/docs/standard/" target="_blank">
-            Download MDB UI KIT
+            Nos marques
         </a>
     </div>
 
     <hr class="m-0" />
 
     <div class="text-center py-4 align-items-center">
-        <p>Follow MDB on social media</p>
+        <p>Follow TheGoldenGun on twitter</p>
         <a href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" class="btn btn-primary m-1" role="button"
            rel="nofollow" target="_blank">
             <i class='bx bxl-instagram-alt h5' style='color:#ffffff' ></i>
