--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -108,7 +108,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2023 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">Fleur Geoffrey</a>
+        <a class="text-primary " href="https://mdbootstrap.com/">Fleur Geoffrey</a>
     </div>
     <!-- Copyright -->
 </footer>
